fixed highlight in dark mode + some minor viusal bugs

--- a/css/base.css
+++ b/css/base.css
@@ -44,3 +44,7 @@ input {
 	text-align: center;
 	border-radius: .25rem;
 }
+select{
+    border-width: 1px;
+    border-radius: 1px;
+}
